--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # Crash log files
 crash.log
 
+.terraform.lock.hcl
+config.azurerm.tfbackend
+.terraform
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
@@ -27,3 +30,5 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+.env
