add pod identity

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ override.tf.json
 
 .env
 terraform/output.json
+
+# Contains sensitive info after helm setup. 
+k8s/aad-pod-identity/resources/render/aad-pod-identity-mic-Secret.yml
