--- a/k8s/argocd/kustomization.yaml
+++ b/k8s/argocd/kustomization.yaml
@@ -1,58 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- resources/render/applications.argoproj.io-CustomResourceDefinition.yml
-- resources/render/applicationsets.argoproj.io-CustomResourceDefinition.yml
-- resources/render/appprojects.argoproj.io-CustomResourceDefinition.yml
-- resources/render/argocd-application-controller-ClusterRole.yml
-- resources/render/argocd-application-controller-ClusterRoleBinding.yml
-- resources/render/argocd-application-controller-Role.yml
-- resources/render/argocd-application-controller-RoleBinding.yml
-- resources/render/argocd-application-controller-ServiceAccount.yml
-- resources/render/argocd-application-controller-StatefulSet.yml
-- resources/render/argocd-application-controller-network-policy-NetworkPolicy.yml
-- resources/render/argocd-applicationset-controller-Deployment.yml
-- resources/render/argocd-applicationset-controller-Role.yml
-- resources/render/argocd-applicationset-controller-RoleBinding.yml
-- resources/render/argocd-applicationset-controller-Service.yml
-- resources/render/argocd-applicationset-controller-ServiceAccount.yml
-- resources/render/argocd-cm-ConfigMap.yml
-- resources/render/argocd-cmd-params-cm-ConfigMap.yml
-- resources/render/argocd-dex-server-Deployment.yml
-- resources/render/argocd-dex-server-Role.yml
-- resources/render/argocd-dex-server-RoleBinding.yml
-- resources/render/argocd-dex-server-Service.yml
-- resources/render/argocd-dex-server-ServiceAccount.yml
-- resources/render/argocd-dex-server-network-policy-NetworkPolicy.yml
-- resources/render/argocd-gpg-keys-cm-ConfigMap.yml
-- resources/render/argocd-metrics-Service.yml
-- resources/render/argocd-notifications-cm-ConfigMap.yml
-- resources/render/argocd-notifications-controller-Deployment.yml
-- resources/render/argocd-notifications-controller-Role.yml
-- resources/render/argocd-notifications-controller-RoleBinding.yml
-- resources/render/argocd-notifications-controller-ServiceAccount.yml
-- resources/render/argocd-notifications-controller-metrics-Service.yml
-- resources/render/argocd-notifications-secret-Secret.yml
-- resources/render/argocd-rbac-cm-ConfigMap.yml
-- resources/render/argocd-redis-Deployment.yml
-- resources/render/argocd-redis-RoleBinding.yml
-- resources/render/argocd-redis-Service.yml
-- resources/render/argocd-redis-ServiceAccount.yml
-- resources/render/argocd-redis-network-policy-NetworkPolicy.yml
-- resources/render/argocd-repo-server-Deployment.yml
-- resources/render/argocd-repo-server-Service.yml
-- resources/render/argocd-repo-server-ServiceAccount.yml
-- resources/render/argocd-repo-server-network-policy-NetworkPolicy.yml
-- resources/render/argocd-secret-Secret.yml
-- resources/render/argocd-server-ClusterRole.yml
-- resources/render/argocd-server-ClusterRoleBinding.yml
-- resources/render/argocd-server-Deployment.yml
-- resources/render/argocd-server-Role.yml
-- resources/render/argocd-server-RoleBinding.yml
-- resources/render/argocd-server-Service.yml
-- resources/render/argocd-server-ServiceAccount.yml
-- resources/render/argocd-server-metrics-Service.yml
-- resources/render/argocd-server-network-policy-NetworkPolicy.yml
-- resources/render/argocd-ssh-known-hosts-cm-ConfigMap.yml
-- resources/render/argocd-tls-certs-cm-ConfigMap.yml
-- resources/render/ns.yaml
+  - resources/render/
+namespace: argocd
