--- a/k8s/external-secrets-operator/resources/test-secret.yaml
+++ b/k8s/external-secrets-operator/resources/test-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: test
+  namespace: external-secrets
 spec:
   refreshInterval: 1m
   secretStoreRef:
