--- a/k8s/tekton/kustomization.yaml
+++ b/k8s/tekton/kustomization.yaml
@@ -1,29 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- resources/render/config-TektonConfig.yml
-- resources/render/config-logging-ConfigMap.yml
-- resources/render/tekton-config-defaults-ConfigMap.yml
-- resources/render/tekton-config-observability-ConfigMap.yml
-- resources/render/tekton-config-read-role-ClusterRole.yml
-- resources/render/tekton-config-read-rolebinding-ClusterRoleBinding.yml
-- resources/render/tekton-operator-ClusterRole.yml
-- resources/render/tekton-operator-ClusterRoleBinding.yml
-- resources/render/tekton-operator-Deployment.yml
-- resources/render/tekton-operator-Namespace.yml
-- resources/render/tekton-operator-Service.yml
-- resources/render/tekton-operator-ServiceAccount.yml
-- resources/render/tekton-operator-info-ConfigMap.yml
-- resources/render/tekton-operator-info-Role.yml
-- resources/render/tekton-operator-info-RoleBinding.yml
-- resources/render/tekton-operator-webhook-Deployment.yml
-- resources/render/tekton-operator-webhook-Service.yml
-- resources/render/tekton-operator-webhook-certs-Secret.yml
-- resources/render/tektonchains.operator.tekton.dev-CustomResourceDefinition.yml
-- resources/render/tektonconfigs.operator.tekton.dev-CustomResourceDefinition.yml
-- resources/render/tektondashboards.operator.tekton.dev-CustomResourceDefinition.yml
-- resources/render/tektonhubs.operator.tekton.dev-CustomResourceDefinition.yml
-- resources/render/tektoninstallersets.operator.tekton.dev-CustomResourceDefinition.yml
-- resources/render/tektonpipelines.operator.tekton.dev-CustomResourceDefinition.yml
-- resources/render/tektonresults.operator.tekton.dev-CustomResourceDefinition.yml
-- resources/render/tektontriggers.operator.tekton.dev-CustomResourceDefinition.yml
+  - resources/render/
+namespace: tekton-operator
