feat add traefik support

--- a/k8s/renovate/kustomization.yaml
+++ b/k8s/renovate/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - resources/deployment.yaml
   - resources/secret.yaml
+  - resources/ns.yaml
 
 configMapGenerator:
   - name: renovate-config
