--- a/k8s/traefik/resources/render/kustomization.yaml
+++ b/k8s/traefik/resources/render/kustomization.yaml
@@ -1,9 +1,20 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- ingressroutes.traefik.containo.us-CustomResourceDefinition.yml
+- ingressroutetcps.traefik.containo.us-CustomResourceDefinition.yml
+- ingressrouteudps.traefik.containo.us-CustomResourceDefinition.yml
+- middlewares.traefik.containo.us-CustomResourceDefinition.yml
+- middlewaretcps.traefik.containo.us-CustomResourceDefinition.yml
+- serverstransports.traefik.containo.us-CustomResourceDefinition.yml
+- tlsoptions.traefik.containo.us-CustomResourceDefinition.yml
+- tlsstores.traefik.containo.us-CustomResourceDefinition.yml
 - traefik-ClusterRole.yml
 - traefik-ClusterRoleBinding.yml
 - traefik-Deployment.yml
 - traefik-List.yml
 - traefik-ServiceAccount.yml
 - traefik-dashboard-IngressRoute.yml
+- traefik-ingress-controller-ClusterRole.yml
+- traefik-ingress-controller-ClusterRoleBinding.yml
+- traefikservices.traefik.containo.us-CustomResourceDefinition.yml
