--- a/k8s/external-dns/kustomization.yaml
+++ b/k8s/external-dns/kustomization.yaml
@@ -2,26 +2,26 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - resources/render
-  - resources/azureidentity.yaml
-  - resources/azureidentitybinding.yaml
-  - resources/ns.yaml
+- resources/render
+- resources/azureidentity.yaml
+- resources/azureidentitybinding.yaml
+- resources/ns.yaml
 
 images:
-  - name: k8s.gcr.io/external-dns/external-dns
-    newTag: v0.12.0
+- name: k8s.gcr.io/external-dns/external-dns
+  newTag: v0.12.0
 
 patches:
-  - target:
-      name: external-dns
-      kind: Deployment
-      group: apps
-      version: v1
-    path: patches/deployment.yaml
+- path: patches/deployment.yaml
+  target:
+    group: apps
+    kind: Deployment
+    name: external-dns
+    version: v1
 
 secretGenerator:
-  - name: azure-config-file
-    files:
-      - secrets/azure.json
+- files:
+  - secrets/azure.json
+  name: azure-config-file
 
 namespace: external-dns
