--- a/k8s/traefik/kustomization.yaml
+++ b/k8s/traefik/kustomization.yaml
@@ -2,3 +2,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - resources/render
+  - resources/ns.yaml
+
+patches:
+  - target:
+      kind: Service
+      name: traefik
+    path: patches/service.yaml
+
+  - target:
+      group: rbac.authorization.k8s.io
+      version: v1
+      kind: ClusterRoleBinding
+      name: traefik-ingress-controller
+    path: patches/clusterrolebinding-ns.yaml
+namespace: traefik
