Working TLS on tekton dashboard

--- a/k8s/tekton/resources/render/kustomization.yaml
+++ b/k8s/tekton/resources/render/kustomization.yaml
@@ -27,3 +27,4 @@ resources:
 - tektonpipelines.operator.tekton.dev-CustomResourceDefinition.yml
 - tektonresults.operator.tekton.dev-CustomResourceDefinition.yml
 - tektontriggers.operator.tekton.dev-CustomResourceDefinition.yml
+namespace: tekton-operator
