--- a/k8s/certmanager/kustomization.yaml
+++ b/k8s/certmanager/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - resources/render
-
-namespace: cert-manager
+  - resources/prod-clusterissuer.yaml
+  - resources/staging-clusterissuer.yaml
+# namespace: cert-manager
