--- a/k8s/tekton/kustomization.yaml
+++ b/k8s/tekton/kustomization.yaml
@@ -2,4 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - resources/render/
-namespace: tekton-operator
+  - resources/dashboard-ingress.yaml
+
+patches:
+  - target:
+      kind: TektonConfig
+      name: config
+      group: operator.tekton.dev
+      version: v1alpha1
+    path: patches/dashboard-config.yaml
