--- a/k8s/traefik/kustomization.yaml
+++ b/k8s/traefik/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - resources/render
   - resources/ns.yaml
+  - resources/stripprefix-middleware.yaml
 
 patches:
   - target:
@@ -16,4 +17,11 @@ patches:
       kind: ClusterRoleBinding
       name: traefik-ingress-controller
     path: patches/clusterrolebinding-ns.yaml
+
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: traefik
+    path: patches/deployment.yaml
 namespace: traefik
