--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ terraform/output.json
 # Contains sensitive info after helm setup. 
 k8s/aad-pod-identity/resources/render/aad-pod-identity-mic-Secret.yml
 k8s/external-dns/secrets/azure.json
+
+temp/
