--- a/k8s/argocd/kustomization.yaml
+++ b/k8s/argocd/kustomization.yaml
@@ -2,4 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - resources/render/
+  - resources/ingress.yaml
 namespace: argocd
+
+patches:
+  - target:
+      kind: Deployment
+      group: apps
+      version: v1
+      name: argocd-server
+    path: patches/deployment.yaml
