WIP renovate setup

--- a/k8s/renovate/configs/config.json
+++ b/k8s/renovate/configs/config.json
@@ -1,4 +1,7 @@
 {
-    "repositories": [],
-    "platform": "github"
+    "repositories": [
+        "pietervincken/renovate-talk-demo-app"
+    ],
+    "platform": "github",
+    "dryRun": "true"
 }
