--- a/k8s/external-secrets-operator/resources/test-secret.yaml
+++ b/k8s/external-secrets-operator/resources/test-secret.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   refreshInterval: 1m
   secretStoreRef:
-    kind: SecretStore
+    kind: ClusterSecretStore
     name: renovate-talk-secret-store
 
   target:
