--- a/k8s/renovate/resources/deployment.yaml
+++ b/k8s/renovate/resources/deployment.yaml
@@ -21,6 +21,10 @@ spec:
               env:
                 - name: LOG_LEVEL
                   value: debug
+                - name: RENOVATE_CONFIG_FILE
+                  value: "/opt/renovate/config.json"
+                - name: RENOVATE_BASE_DIR
+                  value: "/tmp/renovate/"
               volumeMounts:
                 - name: config-volume
                   mountPath: /opt/renovate/
