--- a/k8s/argocd/patches/deployment.yaml
+++ b/k8s/argocd/patches/deployment.yaml
@@ -2,5 +2,5 @@
   path: /spec/template/spec/containers/0/args
   value:
     - --insecure
-    - --basehref
-    - /argocd
+    # - --basehref
+    # - /argocd
