--- a/k8s/traefik/patches/service.yaml
+++ b/k8s/traefik/patches/service.yaml
@@ -1,4 +1,4 @@
 - op: add
   path: /metadata/annotations
   value:
-    external-dns.alpha.kubernetes.io/hostname: "renovate-talk.pietervincken.com"
+    external-dns.alpha.kubernetes.io/hostname: "*.renovate-talk.pietervincken.com"
