--- a/k8s/argocd/kustomization.yaml
+++ b/k8s/argocd/kustomization.yaml
@@ -1,9 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - resources/render/
-  - resources/ingress.yaml
+  - resources/certmanager-argoapp.yaml
   - resources/externaldns-argoapp.yaml
+  - resources/ingress.yaml
+  - resources/render/
+  - resources/tekline-argoapp.yaml
+  - resources/tekton-argoapp.yaml
+  - resources/traefik-argoapp.yaml
   - secrets/githubcredentials-externalsecret.yaml
 namespace: argocd
 
