--- a/k8s/argocd/resources/certmanager-argoapp.yaml
+++ b/k8s/argocd/resources/certmanager-argoapp.yaml
@@ -1,17 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: external-dns
+  name: certmanager
 spec:
   project: default
   source:
     repoURL: git@github.com:pietervincken/renovate-tekton-argo-talk.git
     targetRevision: 1-create-demo
-    path: k8s/external-dns
+    path: k8s/certmanager
   destination:
     server: https://kubernetes.default.svc
-    namespace: external-dns
+    namespace: cert-manager
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    {}
+    # automated:
+    #   prune: true
+    #   selfHeal: true
