--- a/k8s/argocd/resources/tekton-argoapp.yaml
+++ b/k8s/argocd/resources/tekton-argoapp.yaml
@@ -1,16 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: external-dns
+  name: tekton
 spec:
   project: default
   source:
     repoURL: git@github.com:pietervincken/renovate-tekton-argo-talk.git
     targetRevision: 1-create-demo
-    path: k8s/external-dns
+    path: k8s/tekton
   destination:
     server: https://kubernetes.default.svc
-    namespace: external-dns
+    namespace: tekton-operator
   syncPolicy:
     automated:
       prune: true
