--- a/k8s/argocd/resources/ingress.yaml
+++ b/k8s/argocd/resources/ingress.yaml
@@ -3,18 +3,18 @@ kind: Ingress
 metadata:
   name: argocd-server-ingress
   annotations:
-    traefik.ingress.kubernetes.io/router.middlewares: traefik-stripprefix@kubernetescrd
+    # traefik.ingress.kubernetes.io/router.middlewares: traefik-stripprefix@kubernetescrd
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   tls:
     - hosts:
-        - renovate-talk.pietervincken.com
+        - argocd.renovate-talk.pietervincken.com
       secretName: tls
   rules:
-    - host: renovate-talk.pietervincken.com
+    - host: argocd.renovate-talk.pietervincken.com
       http:
         paths:
-          - path: /argocd
+          - path: /
             pathType: Prefix
             backend:
               service:
