--- a/k8s/renovate/kustomization.yaml
+++ b/k8s/renovate/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - resources/cronjob.yaml
+  - resources/cronjob.yaml
   - resources/ns.yaml
   - secrets/renovate-external-secret.yaml
 
