--- a/k8s/argocd/resources/certmanager-argoapp.yaml
+++ b/k8s/argocd/resources/certmanager-argoapp.yaml
@@ -12,7 +12,20 @@ spec:
     server: https://kubernetes.default.svc
     namespace: cert-manager
   syncPolicy:
-    {}
-    # automated:
-    #   prune: true
-    #   selfHeal: true
+    # {}
+    automated:
+      prune: true
+      selfHeal: true
+
+  ignoreDifferences:
+    - kind: ValidatingWebhookConfiguration
+      group: admissionregistration.k8s.io
+      jsonPointers:
+        - /webhooks/0/clientConfig/caBundle
+        - /webhooks/1/clientConfig/caBundle
+        - /webhooks/2/clientConfig/caBundle
+        - /webhooks/3/clientConfig/caBundle
+        - /webhooks/4/clientConfig/caBundle
+        - /webhooks/5/clientConfig/caBundle
+        - /webhooks/6/clientConfig/caBundle
+        - /webhooks/7/clientConfig/caBundle
