--- a/k8s/renovate/secrets/renovate-external-secret.yaml
+++ b/k8s/renovate/secrets/renovate-external-secret.yaml
@@ -14,10 +14,11 @@ spec:
     creationPolicy: Owner
     template:
       data:
-        GITHUB_COM_TOKEN: "{{ .GITHUB_COM_TOKEN }}"
+        GITHUB_COM_TOKEN: "{{ .GITHUB_COM_TOKEN }}" # Same PAT is used here.
         RENOVATE_AUTODISCOVER: "false"
         RENOVATE_GIT_AUTHOR: "Renovate Bot <bot@renovateapp.com>"
         RENOVATE_PLATFORM: "github"
+        RENOVATE_TOKEN: "{{ .GITHUB_COM_TOKEN }}" # Same PAT is used here.
 
   data:
     # name of the SECRET in the Azure KV (no prefix is by default a SECRET)
