fix: tekline trigger

--- a/k8s/tekline/resources/github-trigger-ingress.yaml
+++ b/k8s/tekline/resources/github-trigger-ingress.yaml
@@ -13,7 +13,7 @@ spec:
     - host: tekline.renovate-talk.pietervincken.com
       http:
         paths:
-          - path: /tekline
+          - path: /
             pathType: Prefix
             backend:
               service:
