ignore diff for tekline PR and TR

--- a/k8s/argocd/resources/tekline-argoapp.yaml
+++ b/k8s/argocd/resources/tekline-argoapp.yaml
@@ -15,3 +15,20 @@ spec:
     automated:
       prune: true
       selfHeal: true
+
+  ignoreDifferences:
+    - group: tekton.dev
+      version: v1beta1
+      kind: Pipeline
+
+    - group: tekton.dev
+      version: v1beta1
+      kind: Task
+
+    - group: tekton.dev
+      version: v1beta1
+      kind: PipelineRun
+
+    - group: tekton.dev
+      version: v1beta1
+      kind: TaskRun
