--- a/k8s/certmanager/resources/render/cert-manager-Deployment.yml
+++ b/k8s/certmanager/resources/render/cert-manager-Deployment.yml
@@ -4,13 +4,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cert-manager
-  namespace: "cert-manager"
+  namespace: cert-manager
   labels:
     app: cert-manager
     app.kubernetes.io/name: cert-manager
     app.kubernetes.io/instance: cert-manager
     app.kubernetes.io/component: "controller"
-    app.kubernetes.io/version: "v1.8.2"
+    app.kubernetes.io/version: "v1.9.0"
 spec:
   replicas: 1
   selector:
@@ -25,7 +25,7 @@ spec:
         app.kubernetes.io/name: cert-manager
         app.kubernetes.io/instance: cert-manager
         app.kubernetes.io/component: "controller"
-        app.kubernetes.io/version: "v1.8.2"
+        app.kubernetes.io/version: "v1.9.0"
       annotations:
         prometheus.io/path: "/metrics"
         prometheus.io/scrape: 'true'
@@ -36,7 +36,7 @@ spec:
         runAsNonRoot: true
       containers:
         - name: cert-manager
-          image: "quay.io/jetstack/cert-manager-controller:v1.8.2"
+          image: "quay.io/jetstack/cert-manager-controller:v1.9.0"
           imagePullPolicy: IfNotPresent
           args:
             - --v=2
