--- a/k8s/certmanager/resources/render/cert-manager-Service.yml
+++ b/k8s/certmanager/resources/render/cert-manager-Service.yml
@@ -4,13 +4,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cert-manager
-  namespace: "cert-manager"
+  namespace: cert-manager
   labels:
     app: cert-manager
     app.kubernetes.io/name: cert-manager
     app.kubernetes.io/instance: cert-manager
     app.kubernetes.io/component: "controller"
-    app.kubernetes.io/version: "v1.8.2"
+    app.kubernetes.io/version: "v1.9.0"
 spec:
   type: ClusterIP
   ports:
