--- a/k8s/certmanager/resources/render/cert-manager-controller-approve:cert-manager-io-ClusterRoleBinding.yml
+++ b/k8s/certmanager/resources/render/cert-manager-controller-approve:cert-manager-io-ClusterRoleBinding.yml
@@ -9,12 +9,12 @@ metadata:
     app.kubernetes.io/name: cert-manager
     app.kubernetes.io/instance: cert-manager
     app.kubernetes.io/component: "cert-manager"
-    app.kubernetes.io/version: "v1.8.2"
+    app.kubernetes.io/version: "v1.9.0"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cert-manager-controller-approve:cert-manager-io
 subjects:
   - name: cert-manager
-    namespace: "cert-manager"
+    namespace: cert-manager
     kind: ServiceAccount
