--- a/k8s/certmanager/resources/render/cert-manager-webhook-ValidatingWebhookConfiguration.yml
+++ b/k8s/certmanager/resources/render/cert-manager-webhook-ValidatingWebhookConfiguration.yml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: webhook
     app.kubernetes.io/instance: cert-manager
     app.kubernetes.io/component: "webhook"
-    app.kubernetes.io/version: "v1.8.2"
+    app.kubernetes.io/version: "v1.9.0"
   annotations:
     cert-manager.io/inject-ca-from-secret: "cert-manager/cert-manager-webhook-ca"
 webhooks:
@@ -46,5 +46,5 @@ webhooks:
     clientConfig:
       service:
         name: cert-manager-webhook
-        namespace: "cert-manager"
+        namespace: cert-manager
         path: /validate
