--- a/k8s/certmanager/resources/render/cert-manager-webhook:dynamic-serving-Role.yml
+++ b/k8s/certmanager/resources/render/cert-manager-webhook:dynamic-serving-Role.yml
@@ -4,13 +4,13 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: cert-manager-webhook:dynamic-serving
-  namespace: "cert-manager"
+  namespace: cert-manager
   labels:
     app: webhook
     app.kubernetes.io/name: webhook
     app.kubernetes.io/instance: cert-manager
     app.kubernetes.io/component: "webhook"
-    app.kubernetes.io/version: "v1.8.2"
+    app.kubernetes.io/version: "v1.9.0"
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
