--- a/k8s/tekton/kustomization.yaml
+++ b/k8s/tekton/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 resources:
   - resources/render/
   - resources/dashboard-ingress.yaml
+  - resources/kaniko-azureidentity.yaml
+  - resources/kaniko-azureidentitybinding.yaml
 
 patches:
   - target:
