--- a/k8s/aad-pod-identity/resources/render/aad-pod-identity-view-ClusterRole.yml
+++ b/k8s/aad-pod-identity/resources/render/aad-pod-identity-view-ClusterRole.yml
@@ -1,25 +1,18 @@
 ---
-# Source: aad-pod-identity/templates/nmi-clusterrole.yaml
+# Source: aad-pod-identity/templates/user-facing-clusterroles.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: aad-pod-identity-nmi
+  name: aad-pod-identity-view
   labels:
     app.kubernetes.io/name: aad-pod-identity
     app.kubernetes.io/instance: aad-pod-identity
     app.kubernetes.io/managed-by: Helm
     helm.sh/chart: aad-pod-identity-4.1.12
-    app.kubernetes.io/component: nmi
+    rbac.authorization.k8s.io/aggregate-to-view: "true"
+    rbac.authorization.k8s.io/aggregate-to-edit: "true"
+    rbac.authorization.k8s.io/aggregate-to-admin: "true"
 rules:
-  - apiGroups: ["apiextensions.k8s.io"]
-    resources: ["customresourcedefinitions"]
-    verbs: ["get", "list"]
-  - apiGroups: [""]
-    resources: ["pods"]
-    verbs: ["get", "list", "watch"]
-  - apiGroups: [""]
-    resources: ["secrets"]
-    verbs: ["get"]
   - apiGroups: ["aadpodidentity.k8s.io"]
     resources: ["azureidentitybindings", "azureidentities", "azurepodidentityexceptions"]
     verbs: ["get", "list", "watch"]
