--- a/k8s/aad-pod-identity/resources/render/kustomization.yaml
+++ b/k8s/aad-pod-identity/resources/render/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- aad-pod-identity-edit-ClusterRole.yml
 - aad-pod-identity-mic-ClusterRole.yml
 - aad-pod-identity-mic-ClusterRoleBinding.yml
 - aad-pod-identity-mic-Deployment.yml
@@ -9,5 +10,6 @@ resources:
 - aad-pod-identity-nmi-ClusterRoleBinding.yml
 - aad-pod-identity-nmi-DaemonSet.yml
 - aad-pod-identity-nmi-ServiceAccount.yml
+- aad-pod-identity-view-ClusterRole.yml
 - aks-addon-exception-AzurePodIdentityException.yml
 - mic-AzurePodIdentityException.yml
