--- a/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
+++ b/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
@@ -102,8 +102,8 @@ spec:
         jq -s '.[].secrets = ([.[].secrets]|flatten) | .[0]' ${sa} ${secrets} > ${newsa}
         kubectl apply -f ${newsa}
 
-        kubectl apply -f /scripts
-
+        # add managed identity
+        kubectl apply -f /scripts --namespace=${namespace}
 
         echo ${namespace} | tee $(results.namespace.path)
 
