fix: prevent unneccesary syncs

--- a/k8s/argocd/resources/traefik-argoapp.yaml
+++ b/k8s/argocd/resources/traefik-argoapp.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: traefik
+  annotations:
+    argocd.argoproj.io/manifest-generate-paths: k8s/traefik
 spec:
   project: default
   source:
