--- a/k8s/argocd/resources/certmanager-argoapp.yaml
+++ b/k8s/argocd/resources/certmanager-argoapp.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: certmanager
+  annotations:
+    argocd.argoproj.io/manifest-generate-paths: k8s/certmanager
 spec:
   project: default
   source:
