--- a/k8s/argocd/resources/externaldns-argoapp.yaml
+++ b/k8s/argocd/resources/externaldns-argoapp.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: external-dns
+  annotations:
+    argocd.argoproj.io/manifest-generate-paths: k8s/external-dns
 spec:
   project: default
   source:
