--- a/k8s/argocd/resources/tekline-argoapp.yaml
+++ b/k8s/argocd/resources/tekline-argoapp.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: tekline
+  annotations:
+    argocd.argoproj.io/manifest-generate-paths: k8s/tekline
 spec:
   project: default
   source:
