--- a/k8s/argocd/resources/renovate-argoapp.yaml
+++ b/k8s/argocd/resources/renovate-argoapp.yaml
@@ -3,7 +3,7 @@ kind: Application
 metadata:
   name: renovate
   annotations:
-    argocd.argoproj.io/manifest-generate-paths: k8s/renovate
+    argocd.argoproj.io/manifest-generate-paths: .
 spec:
   project: default
   source:
