WIP ignore tekton resources

--- a/k8s/argocd/patches/configmap.yaml
+++ b/k8s/argocd/patches/configmap.yaml
@@ -6,6 +6,11 @@
           - tekton.dev
         kinds:
           - PipelineRun
+        clusters:
+          - https://kubernetes.default.svc
+      - apiGroups:
+          - tekton.dev
+        kinds:
           - TaskRun
         clusters:
           - https://kubernetes.default.svc
