--- a/k8s/tekline/resources/tasks/trigger-pipelines-task/trigger-pipelines-task.yaml
+++ b/k8s/tekline/resources/tasks/trigger-pipelines-task/trigger-pipelines-task.yaml
@@ -20,7 +20,7 @@ spec:
         set -euxo pipefail
 
         namespace=$(params.namespace)
-        for pipeline in $(kubectl get pipeline -l tekline.pietervincken.com/skip!=true -o=name -n ${namespace} | sed 's/.*\///')
+        for pipeline in $(kubectl get pipeline -l tekline.pietervincken.com/skip!=true -o=name -n ${namespace})
         do {
 
           echo "Evaluating: $pipeline"
