--- a/k8s/tekline/resources/tasks/trigger-pipelines-task/trigger-pipelines-task.yaml
+++ b/k8s/tekline/resources/tasks/trigger-pipelines-task/trigger-pipelines-task.yaml
@@ -41,7 +41,9 @@ spec:
               continue
           fi
 
-          tkn pipeline start ${pipeline}                                  \
+          base_pipeline=$(basename ${pipeline})
+
+          tkn pipeline start ${base_pipeline}                                  \
                     --pod-template /scripts/pod-template.yaml                             \
                     -w name=workspace,volumeClaimTemplateFile=/scripts/pvc-template.yaml  \
                     -p git-url=$(params.git-url)                          \
