fux: don't print commands

--- a/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
+++ b/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
@@ -20,7 +20,7 @@ spec:
           mountPath: /scripts
       script: |
         #!/bin/bash
-        set -euxo pipefail
+        set -euo pipefail
 
         function get_namespace() {
             local reponame=$1
