enable auto-sync for teklien

--- a/k8s/argocd/resources/tekline-argoapp.yaml
+++ b/k8s/argocd/resources/tekline-argoapp.yaml
@@ -15,5 +15,5 @@ spec:
     namespace: tekline
   syncPolicy:
     automated:
-      prune: false # otherwise Tekline PR, TRs and pods will be automatically pruned.
+      prune: true
       selfHeal: true
