--- a/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
+++ b/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
@@ -105,6 +105,8 @@ spec:
         # add managed identity
         kubectl apply -f /scripts --namespace=${namespace}
 
+        kubectl label namespace ${namespace} tekline.joyrex2001.com/namespace="true"
+
         echo ${namespace} | tee $(results.namespace.path)
 
   volumes:
