--- a/k8s/tekline/resources/delegate-rbac.yaml
+++ b/k8s/tekline/resources/delegate-rbac.yaml
@@ -32,6 +32,7 @@ rules:
     verbs:
       - "get"
       - "create"
+      - "update"
   - apiGroups:
       - "rbac.authorization.k8s.io"
     resources:
