fix rbac even more

--- a/k8s/tekline/resources/delegate-rbac.yaml
+++ b/k8s/tekline/resources/delegate-rbac.yaml
@@ -33,6 +33,7 @@ rules:
       - "get"
       - "create"
       - "update"
+      - "patch"
   - apiGroups:
       - "rbac.authorization.k8s.io"
     resources:
