fix: add override to labeling

--- a/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
+++ b/k8s/tekline/resources/tasks/create-namespace-task/create-namespace-task.yaml
@@ -105,7 +105,7 @@ spec:
         # add managed identity
         kubectl apply -f /scripts --namespace=${namespace}
 
-        kubectl label namespace ${namespace} tekline.joyrex2001.com/namespace="true"
+        kubectl label namespace ${namespace} --overwrite tekline.joyrex2001.com/namespace="true" 
 
         echo ${namespace} | tee $(results.namespace.path)
 
