--- a/k8s/renovate/configs/config.json
+++ b/k8s/renovate/configs/config.json
@@ -1,8 +1,9 @@
 {
     "repositories": [
-        "pietervincken/renovate-talk-demo-app",
-        "pietervincken/renovate-tekton-argo-talk",
-        "pietervincken/renovate-talk-microservice-demo"
+        // "pietervincken/renovate-talk-demo-app",
+        // "pietervincken/renovate-tekton-argo-talk",
+        // "pietervincken/renovate-talk-microservice-demo",
+        "pietervincken/renovate-talk-demo-java-app"
     ],
     "platform": "github"
 }
