fix add more repos

--- a/k8s/renovate/configs/config.json
+++ b/k8s/renovate/configs/config.json
@@ -1,5 +1,6 @@
 {
     "repositories": [
+        "pietervincken/renovate-talk-demo-app",
         "pietervincken/renovate-talk-demo-java-app"
     ],
     "platform": "github"
