--- a/k8s/renovate/resources/cronjob.yaml
+++ b/k8s/renovate/resources/cronjob.yaml
@@ -6,8 +6,7 @@ spec:
   # schedule: "0-59/5 * * * *" #Every 5 minutes, for demo purposes only!
   schedule: "0 1 * * *" #At 1 every night.
   concurrencyPolicy: Forbid
-  parallelism: 1
-  completions: 1
+  backoffLimit: 1
   jobTemplate:
     spec:
       template:
