fix: make pruner aggressive

--- a/k8s/tekton/patches/dashboard-config.yaml
+++ b/k8s/tekton/patches/dashboard-config.yaml
@@ -4,5 +4,9 @@
     readonly: true
 
 - op: add
-  path: /spec/pruner
-  value: null
+  path: /spec/pruner/schedule
+  value: "*/5 * * * *"
+
+- op: add
+  path: /spec/pruner/keep
+  value: "10"
