--- a/k8s/renovate/resources/cronjob.yaml
+++ b/k8s/renovate/resources/cronjob.yaml
@@ -2,6 +2,8 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: renovate
+  labels:
+    aadpodidbinding: kaniko
 spec:
   # schedule: "0-59/5 * * * *" #Every 5 minutes, for demo purposes only!
   schedule: "0 1 * * *" #At 1 every night.
