only use deploy renovate for now

--- a/k8s/renovate/configs/config copy.json
+++ b/k8s/renovate/configs/config copy.json
@@ -3,7 +3,8 @@
         // "pietervincken/renovate-talk-demo-app",
         // "pietervincken/renovate-tekton-argo-talk",
         // "pietervincken/renovate-talk-microservice-demo",
-        "pietervincken/renovate-talk-demo-java-app"
+        "pietervincken/renovate-talk-java-demo-app",
+        "pietervincken/renovate-talk-java-demo-app-deploy",
     ],
     "platform": "github"
 }
