--- a/k8s/renovate/secrets/renovate-external-secret.yaml
+++ b/k8s/renovate/secrets/renovate-external-secret.yaml
@@ -15,7 +15,45 @@ spec:
     template:
       data:
         GITHUB_COM_TOKEN: "{{ .GITHUB_COM_TOKEN }}" # Same PAT is used here.
+        RENOVATE_AUTOD---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: renovate-env
+spec:
+  refreshInterval: 1m
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: renovate-talk-secret-store
+
+  target:
+    name: renovate-env
+    creationPolicy: Owner
+    template:
+      data:
+        GITHUB_COM_TOKEN: "{{ .GITHUB_COM_TOKEN }}" # Same PAT is used here.
         RENOVATE_AUTODISCOVER: "false"
+        RENOVATE_GIT_AUTHOR: "Renovate Bot <bot@renovateapp.com>"
+        RENOVATE_PLATFORM: "github"
+        RENOVATE_TOKEN: "{{ .GITHUB_COM_TOKEN }}" # Same PAT is used here.
+
+        DOCKER_RENOVATETALKACR_AZURECR_IO_USERNAME: "{{ .ACR_USERNAME }}"
+        DOCKER_RENOVATETALKACR_AZURECR_IO_PASSWORD: "{{ .ACR_PASSWORD }}"
+
+  data:
+    # name of the SECRET in the Azure KV (no prefix is by default a SECRET)
+    - secretKey: GITHUB_COM_TOKEN
+      remoteRef:
+        key: github-pat
+
+    - secretKey: ACR_USERNAME
+      remoteRef:
+        key: acr-username
+
+    - secretKey: ACR_PASSWORD
+      remoteRef:
+        key: acr-password
+ISCOVER: "false"
         RENOVATE_GIT_AUTHOR: "Renovate Bot <bot@renovateapp.com>"
         RENOVATE_PLATFORM: "github"
         RENOVATE_TOKEN: "{{ .GITHUB_COM_TOKEN }}" # Same PAT is used here.
