--- a/k8s/renovate/secrets/renovate-external-secret.yaml
+++ b/k8s/renovate/secrets/renovate-external-secret.yaml
@@ -22,6 +22,7 @@ spec:
 
         DOCKER_RENOVATETALKACR_AZURECR_IO_USERNAME: "{{ .ACR_USERNAME }}"
         DOCKER_RENOVATETALKACR_AZURECR_IO_PASSWORD: "{{ .ACR_PASSWORD }}"
+        RENOVATE_DETECT_HOST_RULES_FROM_ENV: true
 
   data:
     # name of the SECRET in the Azure KV (no prefix is by default a SECRET)
