fix: add demo app to config

--- a/k8s/renovate/configs/config.json
+++ b/k8s/renovate/configs/config.json
@@ -1,5 +1,6 @@
 {
     "repositories": [
+        "pietervincken/renovate-talk-java-demo-app",
         "pietervincken/renovate-talk-java-demo-app-deploy"
     ],
     "platform": "github"
